--- a/about-us.html
+++ b/about-us.html
@@ -54,8 +54,7 @@
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
+                                    <li><a href="https://www.linkedin.com/in/vst-growth-business-057848296/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -68,18 +67,8 @@
                                     <li><i class="fas fa-envelope"></i><a
                                             href="mailto:info@vstgrowthbusiness.co">info@vstgrowthbusiness.co</a>
                                     </li>
-                                    <!-- <li><i class="far fa-clock"></i>Mon - Fri: 90:00 - 21:00</li> -->
                                 </ul>
                             </div>
-                            <!-- <div class="header-social-wrap">
-                                    <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                                    </ul>
-                                </div> -->
                         </div>
                     </div>
                 </div>
@@ -97,14 +86,9 @@
                                 </div>
                                 <div class="navbar-wrap main-menu d-none d-lg-flex">
                                     <ul class="navigation">
-                                        <li class="active menu-item-has-children"><a href="index.html">Home</a>
-                                            <!-- <ul class="sub-menu">
-                                                    <li class="active"><a href="index-2.html">Home One</a></li>
-                                                    <li><a href="index-3.html">Home Two</a></li>
-                                                    <li><a href="index-4.html">Home Three</a></li>
-                                                </ul> -->
+                                        <li class="menu-item-has-children"><a href="index.html">Home</a>
                                         </li>
-                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li class="active"><a href="about-us.html">About Us</a></li>
                                         <li class="menu-item-has-children"><a href="#">Services</a>
                                             <ul class="sub-menu">
                                                 <li class="menu-item-has-children"><a href="power-bi.html">Power BI</a>
@@ -115,57 +99,39 @@
                                                                 Customization</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="sharepoint.html">SharePoint</a>
+                                                <li class="menu-item-has-children"><a
+                                                        href="sharepoint.html">SharePoint</a>
                                                     <ul class="sub-menu">
-                                                        <li><a href="sharepoint-consultancy.html">SharePoint Consultancy</a>
+                                                        <li><a href="sharepoint-consultancy.html">SharePoint
+                                                                Consultancy</a>
                                                         </li>
-                                                        <li><a href="sharepoint-customization.html">SharePoint Customization</a></li>
+                                                        <li><a href="sharepoint-customization.html">SharePoint
+                                                                Customization</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="ms-dynamics-365-business-central.html">MS Dynamics 365 Business Central</a>
+                                                <li class="menu-item-has-children"><a
+                                                        href="ms-dynamics-365-business-central.html">MS Dynamics 365
+                                                        Business Central</a>
                                                     <ul class="sub-menu">
-                                                        <li><a href="dynamics-365-business-central-consultancy.html">Dynamics 365 Business Central Consultancy</a>
+                                                        <li><a href="dynamics-365-business-central-consultancy.html">Dynamics
+                                                                365 Business Central Consultancy</a>
                                                         </li>
-                                                        <li><a href="dynamics-365-business-central-customization.html">Dynamics 365 Business Central Customization</a></li>
+                                                        <li><a href="dynamics-365-business-central-customization.html">Dynamics
+                                                                365 Business Central Customization</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="microsoft-azure.html">Microsoft Azure</a>
+                                                <li class="menu-item-has-children"><a
+                                                        href="microsoft-azure.html">Microsoft Azure</a>
                                                     <ul class="sub-menu">
                                                         <li><a href="azure-consultancy.html">Azure Consultancy</a>
                                                         </li>
-                                                        <li><a href="azure-customization.html">Azure Customization</a></li>
+                                                        <li><a href="azure-customization.html">Azure Customization</a>
+                                                        </li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="#">Others</a></li>
-                                                <!-- <li><a href="#">Services 2</a></li>
-                                                <li><a href="#">Services 3</a></li>
-                                                <li><a href="#">Services 4</a></li> -->
-                                                <!-- <li class="menu-item-has-children"><a href="team.html">Team</a>
-                                                        <ul class="sub-menu">
-                                                            <li><a href="team.html">Team One</a></li>
-                                                            <li><a href="team-2.html">Team Two</a></li>
-                                                            <li><a href="team-details.html">Team Details</a></li>
-                                                        </ul>
-                                                    </li> -->
-                                                <!-- <li><a href="404.html">404 Error</a></li> -->
+                                                <!-- <li><a href="#">Others</a></li> -->
                                             </ul>
                                         </li>
-                                        <!-- <li class="menu-item-has-children"><a href="#">Project</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="#">Project One</a></li>
-                                                <li><a href="#">Project Two</a></li>
-                                                <li><a href="#">Project Three</a></li>
-                                                <li><a href="#">Project Details</a></li>
-                                            </ul>
-                                        </li> -->
-                                        <!-- <li class="menu-item-has-children"><a href="#">News</a>
-                                                <ul class="sub-menu">
-                                                    <li><a href="blog.html">Blog Grid</a></li>
-                                                    <li><a href="blog-2.html">Blog List</a></li>
-                                                    <li><a href="blog-3.html">Blog Grid Sidebar</a></li>
-                                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                                </ul>
-                                            </li> -->
                                         <li><a href="our-focused.html">Our Focused</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
@@ -173,7 +139,6 @@
                                 <div class="header-action">
                                     <ul class="list-wrap">
                                         <li class="header-btn"><a href="contact.html" class="btn">get a quote</a></li>
-                                        <!-- <li class="header-search"><a href="#"><i class="fas fa-search"></i></a></li> -->
                                     </ul>
                                 </div>
                             </nav>
@@ -820,7 +785,7 @@
 
 
     <!-- footer-area -->
-    <footer class="choose-bg">
+    <footer class="work-area">
         <div class="footer-area footer-bg">
             <div class="footer-top">
                 <div class="container">
@@ -831,13 +796,13 @@
                                     <a href="index-2.html"><img src="assets/img/logo/w_logo.svg" alt=""></a>
                                 </div>
                                 <div class="footer-content">
-                                    <p>Grursus mal suada faci lisis the Lorem consec elit.</p>
+                                    <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
+                                        dedicated to pioneering in our domain</p>
                                     <ul class="list-wrap">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -849,10 +814,11 @@
                                 </div>
                                 <div class="fw-link">
                                     <ul class="list-wrap">
-                                        <li><a href="it-services.html">Services 1</a></li>
-                                        <li><a href="it-services.html">Services 2</a></li>
-                                        <li><a href="it-services.html">Services 3</a></li>
-                                        <li><a href="it-services.html">Services 4</a></li>
+                                        <li><a href="power-bi.html">Power BI</a></li>
+                                        <li><a href="sharepoint.html">SharePoint</a></li>
+                                        <li><a href="ms-dynamics-365-business-central.html">MS Dynamics 365 Business
+                                                Central</a></li>
+                                        <li><a href="microsoft-azure.html">Microsoft Azure</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -867,7 +833,6 @@
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="#">Services</a></li>
-                                        <li><a href="#">Project</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
@@ -879,13 +844,7 @@
                                     <h4 class="title">Get In Touch</h4>
                                 </div>
                                 <div class="fw-link">
-                                    <!-- <ul class="list-wrap">
-                                            <li><a href="contact.html">Forum Support</a></li>
-                                            <li><a href="faq.html">Help & FAQ</a></li>
-                                            <li><a href="contact.html">Contact Us</a></li>
-                                            <li><a href="services-details.html">Pricing and plans</a></li>
-                                            <li><a href="contact.html">Cookies Policy</a></li>
-                                        </ul> -->
+
                                     <iframe
                                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7157.366525949512!2d82.26845736272045!3d26.23947925783612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399080ec0d1819dd%3A0x1d29ffa27d01c7f2!2sBarausa%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1697823254907!5m2!1sen!2sin"
                                         width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
@@ -901,17 +860,14 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="copyright-text">
-                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved by
-                                    <span>www.pandeytech.in</span>
-                                </p>
+                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved </p>
                             </div>
                         </div>
                         <div class="col-lg-5">
                             <div class="footer-menu">
                                 <ul class="list-wrap">
-                                    <li><a href="contact.html">Privacy Policy</a></li>
-                                    <li><a href="contact.html">Terms & Conditions</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="javascript:void(0);">Privacy Policy</a></li>
+                                    <li><a href="javascript:void(0);">Terms & Conditions</a></li>
                                 </ul>
                             </div>
                         </div>
