--- a/sharepoint-consultancy.html
+++ b/sharepoint-consultancy.html
@@ -57,8 +57,8 @@
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
+                                    <li><a href="https://www.linkedin.com/in/vst-growth-business-057848296/"
+                                            target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -71,18 +71,8 @@
                                     <li><i class="fas fa-envelope"></i><a
                                             href="mailto:info@vstgrowthbusiness.co">info@vstgrowthbusiness.co</a>
                                     </li>
-                                    <!-- <li><i class="far fa-clock"></i>Mon - Fri: 90:00 - 21:00</li> -->
                                 </ul>
                             </div>
-                            <!-- <div class="header-social-wrap">
-                                    <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                                    </ul>
-                                </div> -->
                         </div>
                     </div>
                 </div>
@@ -100,15 +90,10 @@
                                 </div>
                                 <div class="navbar-wrap main-menu d-none d-lg-flex">
                                     <ul class="navigation">
-                                        <li class="active menu-item-has-children"><a href="index.html">Home</a>
-                                            <!-- <ul class="sub-menu">
-                                                    <li class="active"><a href="index-2.html">Home One</a></li>
-                                                    <li><a href="index-3.html">Home Two</a></li>
-                                                    <li><a href="index-4.html">Home Three</a></li>
-                                                </ul> -->
+                                        <li class="menu-item-has-children"><a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about-us.html">About Us</a></li>
-                                        <li class="menu-item-has-children"><a href="#">Services</a>
+                                        <li class="active menu-item-has-children"><a href="#">Services</a>
                                             <ul class="sub-menu">
                                                 <li class="menu-item-has-children"><a href="power-bi.html">Power BI</a>
                                                     <ul class="sub-menu">
@@ -148,36 +133,9 @@
                                                         </li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="#">Others</a></li>
-                                                <!-- <li><a href="#">Services 2</a></li>
-                                                <li><a href="#">Services 3</a></li>
-                                                <li><a href="#">Services 4</a></li> -->
-                                                <!-- <li class="menu-item-has-children"><a href="team.html">Team</a>
-                                                        <ul class="sub-menu">
-                                                            <li><a href="team.html">Team One</a></li>
-                                                            <li><a href="team-2.html">Team Two</a></li>
-                                                            <li><a href="team-details.html">Team Details</a></li>
-                                                        </ul>
-                                                    </li> -->
-                                                <!-- <li><a href="404.html">404 Error</a></li> -->
+                                                <!-- <li><a href="#">Others</a></li> -->
                                             </ul>
                                         </li>
-                                        <!-- <li class="menu-item-has-children"><a href="#">Project</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="#">Project One</a></li>
-                                                <li><a href="#">Project Two</a></li>
-                                                <li><a href="#">Project Three</a></li>
-                                                <li><a href="#">Project Details</a></li>
-                                            </ul>
-                                        </li> -->
-                                        <!-- <li class="menu-item-has-children"><a href="#">News</a>
-                                                <ul class="sub-menu">
-                                                    <li><a href="blog.html">Blog Grid</a></li>
-                                                    <li><a href="blog-2.html">Blog List</a></li>
-                                                    <li><a href="blog-3.html">Blog Grid Sidebar</a></li>
-                                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                                </ul>
-                                            </li> -->
                                         <li><a href="our-focused.html">Our Focused</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
@@ -185,7 +143,6 @@
                                 <div class="header-action">
                                     <ul class="list-wrap">
                                         <li class="header-btn"><a href="contact.html" class="btn">get a quote</a></li>
-                                        <!-- <li class="header-search"><a href="#"><i class="fas fa-search"></i></a></li> -->
                                     </ul>
                                 </div>
                             </nav>
@@ -275,37 +232,57 @@
                             <h2>SharePoint</h2>
                         </div>
                         <div class="innerpage-para-dv">
-                            <p>Consultancy and customization services in SharePoint are critical for tailoring this versatile platform to meet specific business needs and for ensuring that it aligns with your organization's objectives. Both consultancy and customization services are essential for organizations looking to leverage SharePoint's full potential. A well-designed SharePoint implementation, with customized sites, workflows, and automation, can lead to improved collaboration, streamlined processes, and better information management. SharePoint experts can help ensure that the platform aligns with your organization's unique needs and objectives.
+                            <p>Consultancy and customization services in SharePoint are critical for tailoring this
+                                versatile platform to meet specific business needs and for ensuring that it aligns with
+                                your organization's objectives. Both consultancy and customization services are
+                                essential for organizations looking to leverage SharePoint's full potential. A
+                                well-designed SharePoint implementation, with customized sites, workflows, and
+                                automation, can lead to improved collaboration, streamlined processes, and better
+                                information management. SharePoint experts can help ensure that the platform aligns with
+                                your organization's unique needs and objectives.
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-5 col-12">
                         <div class="inner-page-image-dv">
-                            <img src="assets/img/product-img/provider.png" class="img-fluid img-responsive"/>
+                            <img src="assets/img/product-img/provider.png" class="img-fluid img-responsive" />
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-7 col-12">
                         <div class="innerpage-para-list-dv">
-                            <h4><strong> Here's an overview of what SharePoint consultancy and customization services entail:</strong></h4>
+                            <h4><strong> Here's an overview of what SharePoint consultancy and customization services
+                                    entail:</strong></h4>
                             <p><strong>SharePoint Consultancy:</strong></p>
-                            <p>SharePoint consultancy services involve experts providing guidance, best practices, and recommendations to help organizations maximize the use of SharePoint for document management, collaboration, and business processes. This consultancy can include:</p>
+                            <p>SharePoint consultancy services involve experts providing guidance, best practices, and
+                                recommendations to help organizations maximize the use of SharePoint for document
+                                management, collaboration, and business processes. This consultancy can include:</p>
                             <ul>
-                                <li>Needs Assessment: Consultants assess your organization's requirements and goals to determine how SharePoint can best address your needs.</li>
-                                <li>Information Architecture: Experts help design a structured information architecture for SharePoint to ensure efficient data organization, search, and retrieval.</li>
-                                <li>Migration Planning: Assistance in planning and executing data migration from legacy systems to SharePoint.</li>
-                               
-                                
+                                <li>Needs Assessment: Consultants assess your organization's requirements and goals to
+                                    determine how SharePoint can best address your needs.</li>
+                                <li>Information Architecture: Experts help design a structured information architecture
+                                    for SharePoint to ensure efficient data organization, search, and retrieval.</li>
+                                <li>Migration Planning: Assistance in planning and executing data migration from legacy
+                                    systems to SharePoint.</li>
+
+
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-12 col-md-12 col-12 pt-4">
                         <div class="innerpage-para-list-dv">
                             <ul>
-                                <li>Security and Compliance: Advising on security best practices, data access controls, and compliance with relevant regulations.</li>
-                                <li>User Training: Providing training to employees to ensure they can effectively use SharePoint features for document management, collaboration, and intranet/extranet portals.</li>
-                                <li>Governance and Best Practices: Implementing governance policies and best practices to maintain a well-organized and efficient SharePoint environment.</li>
-                                <li>Integration and Third-Party Tools: Integrating SharePoint with other software, services, or applications used by your organization, such as Microsoft 365 apps, third-party add-ons, or business-specific tools.</li>
-                                <li>Workflow and Automation: Designing custom workflows and automation to streamline business processes within SharePoint.</li>
+                                <li>Security and Compliance: Advising on security best practices, data access controls,
+                                    and compliance with relevant regulations.</li>
+                                <li>User Training: Providing training to employees to ensure they can effectively use
+                                    SharePoint features for document management, collaboration, and intranet/extranet
+                                    portals.</li>
+                                <li>Governance and Best Practices: Implementing governance policies and best practices
+                                    to maintain a well-organized and efficient SharePoint environment.</li>
+                                <li>Integration and Third-Party Tools: Integrating SharePoint with other software,
+                                    services, or applications used by your organization, such as Microsoft 365 apps,
+                                    third-party add-ons, or business-specific tools.</li>
+                                <li>Workflow and Automation: Designing custom workflows and automation to streamline
+                                    business processes within SharePoint.</li>
                             </ul>
                         </div>
                     </div>
@@ -371,13 +348,13 @@
                                     <a href="index-2.html"><img src="assets/img/logo/w_logo.svg" alt=""></a>
                                 </div>
                                 <div class="footer-content">
-                                    <p>Grursus mal suada faci lisis the Lorem consec elit.</p>
+                                    <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
+                                        dedicated to pioneering in our domain</p>
                                     <ul class="list-wrap">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -389,10 +366,11 @@
                                 </div>
                                 <div class="fw-link">
                                     <ul class="list-wrap">
-                                        <li><a href="it-services.html">Services 1</a></li>
-                                        <li><a href="it-services.html">Services 2</a></li>
-                                        <li><a href="it-services.html">Services 3</a></li>
-                                        <li><a href="it-services.html">Services 4</a></li>
+                                        <li><a href="power-bi.html">Power BI</a></li>
+                                        <li><a href="sharepoint.html">SharePoint</a></li>
+                                        <li><a href="ms-dynamics-365-business-central.html">MS Dynamics 365 Business
+                                                Central</a></li>
+                                        <li><a href="microsoft-azure.html">Microsoft Azure</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -407,7 +385,6 @@
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="#">Services</a></li>
-                                        <li><a href="#">Project</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
@@ -419,13 +396,7 @@
                                     <h4 class="title">Get In Touch</h4>
                                 </div>
                                 <div class="fw-link">
-                                    <!-- <ul class="list-wrap">
-                                            <li><a href="contact.html">Forum Support</a></li>
-                                            <li><a href="faq.html">Help & FAQ</a></li>
-                                            <li><a href="contact.html">Contact Us</a></li>
-                                            <li><a href="services-details.html">Pricing and plans</a></li>
-                                            <li><a href="contact.html">Cookies Policy</a></li>
-                                        </ul> -->
+
                                     <iframe
                                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7157.366525949512!2d82.26845736272045!3d26.23947925783612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399080ec0d1819dd%3A0x1d29ffa27d01c7f2!2sBarausa%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1697823254907!5m2!1sen!2sin"
                                         width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
@@ -441,17 +412,14 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="copyright-text">
-                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved by
-                                    <span>www.pandeytech.in</span>
-                                </p>
+                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved </p>
                             </div>
                         </div>
                         <div class="col-lg-5">
                             <div class="footer-menu">
                                 <ul class="list-wrap">
-                                    <li><a href="contact.html">Privacy Policy</a></li>
-                                    <li><a href="contact.html">Terms & Conditions</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="javascript:void(0);">Privacy Policy</a></li>
+                                    <li><a href="javascript:void(0);">Terms & Conditions</a></li>
                                 </ul>
                             </div>
                         </div>
