--- a/power-bi-consultancy.html
+++ b/power-bi-consultancy.html
@@ -57,8 +57,8 @@
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
+                                    <li><a href="https://www.linkedin.com/in/vst-growth-business-057848296/"
+                                            target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -71,18 +71,8 @@
                                     <li><i class="fas fa-envelope"></i><a
                                             href="mailto:info@vstgrowthbusiness.co">info@vstgrowthbusiness.co</a>
                                     </li>
-                                    <!-- <li><i class="far fa-clock"></i>Mon - Fri: 90:00 - 21:00</li> -->
                                 </ul>
                             </div>
-                            <!-- <div class="header-social-wrap">
-                                    <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                                    </ul>
-                                </div> -->
                         </div>
                     </div>
                 </div>
@@ -100,15 +90,10 @@
                                 </div>
                                 <div class="navbar-wrap main-menu d-none d-lg-flex">
                                     <ul class="navigation">
-                                        <li class="active menu-item-has-children"><a href="index.html">Home</a>
-                                            <!-- <ul class="sub-menu">
-                                                    <li class="active"><a href="index-2.html">Home One</a></li>
-                                                    <li><a href="index-3.html">Home Two</a></li>
-                                                    <li><a href="index-4.html">Home Three</a></li>
-                                                </ul> -->
+                                        <li class="menu-item-has-children"><a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about-us.html">About Us</a></li>
-                                        <li class="menu-item-has-children"><a href="#">Services</a>
+                                        <li class="active menu-item-has-children"><a href="#">Services</a>
                                             <ul class="sub-menu">
                                                 <li class="menu-item-has-children"><a href="power-bi.html">Power BI</a>
                                                     <ul class="sub-menu">
@@ -148,36 +133,9 @@
                                                         </li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="#">Others</a></li>
-                                                <!-- <li><a href="#">Services 2</a></li>
-                                                <li><a href="#">Services 3</a></li>
-                                                <li><a href="#">Services 4</a></li> -->
-                                                <!-- <li class="menu-item-has-children"><a href="team.html">Team</a>
-                                                        <ul class="sub-menu">
-                                                            <li><a href="team.html">Team One</a></li>
-                                                            <li><a href="team-2.html">Team Two</a></li>
-                                                            <li><a href="team-details.html">Team Details</a></li>
-                                                        </ul>
-                                                    </li> -->
-                                                <!-- <li><a href="404.html">404 Error</a></li> -->
+                                                <!-- <li><a href="#">Others</a></li> -->
                                             </ul>
                                         </li>
-                                        <!-- <li class="menu-item-has-children"><a href="#">Project</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="#">Project One</a></li>
-                                                <li><a href="#">Project Two</a></li>
-                                                <li><a href="#">Project Three</a></li>
-                                                <li><a href="#">Project Details</a></li>
-                                            </ul>
-                                        </li> -->
-                                        <!-- <li class="menu-item-has-children"><a href="#">News</a>
-                                                <ul class="sub-menu">
-                                                    <li><a href="blog.html">Blog Grid</a></li>
-                                                    <li><a href="blog-2.html">Blog List</a></li>
-                                                    <li><a href="blog-3.html">Blog Grid Sidebar</a></li>
-                                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                                </ul>
-                                            </li> -->
                                         <li><a href="our-focused.html">Our Focused</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
@@ -185,7 +143,6 @@
                                 <div class="header-action">
                                     <ul class="list-wrap">
                                         <li class="header-btn"><a href="contact.html" class="btn">get a quote</a></li>
-                                        <!-- <li class="header-search"><a href="#"><i class="fas fa-search"></i></a></li> -->
                                     </ul>
                                 </div>
                             </nav>
@@ -275,34 +232,50 @@
                             <h2>Power BI</h2>
                         </div>
                         <div class="innerpage-para-dv">
-                            <p>Consultancy and customization in Power BI are valuable services that help businesses and organizations make the most of this powerful business intelligence tool. Both consultancy and customization services are essential for organizations looking to get the most value from Power BI. A well-designed Power BI implementation, with custom reports and dashboards, can lead to better decision-making, improved operational efficiency, and a competitive advantage. Consulting experts and customizing Power BI can help you achieve your specific business intelligence goals.
+                            <p>Consultancy and customization in Power BI are valuable services that help businesses and
+                                organizations make the most of this powerful business intelligence tool. Both
+                                consultancy and customization services are essential for organizations looking to get
+                                the most value from Power BI. A well-designed Power BI implementation, with custom
+                                reports and dashboards, can lead to better decision-making, improved operational
+                                efficiency, and a competitive advantage. Consulting experts and customizing Power BI can
+                                help you achieve your specific business intelligence goals.
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-5 col-12">
                         <div class="inner-page-image-dv">
-                            <img src="assets/img/product-img/provider.png" class="img-fluid img-responsive"/>
+                            <img src="assets/img/product-img/provider.png" class="img-fluid img-responsive" />
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-7 col-12">
                         <div class="innerpage-para-list-dv">
                             <h4><strong>Here's an overview of what these services entail:</strong></h4>
                             <p><strong>Power BI Consultancy:</strong></p>
-                            <p>Power BI consultancy services involve experts providing guidance, recommendations, and best practices to help organizations use Power BI effectively for their data analysis and reporting needs. This consultancy can include:</p>
+                            <p>Power BI consultancy services involve experts providing guidance, recommendations, and
+                                best practices to help organizations use Power BI effectively for their data analysis
+                                and reporting needs. This consultancy can include:</p>
                             <ul>
-                                <li>Assessment and Planning: Consultants assess your organization's data, reporting, and analytics needs, and create a plan for implementing Power BI effectively.</li>
-                                <li>Architecture and Data Modeling: Experts help design data models and architectures that optimize data visualization, ensuring that your data is structured for effective reporting.</li>
-                                <li>Data Integration: Consultants assist in connecting Power BI to your data sources, whether they are databases, cloud services, or other applications.</li>
+                                <li>Assessment and Planning: Consultants assess your organization's data, reporting, and
+                                    analytics needs, and create a plan for implementing Power BI effectively.</li>
+                                <li>Architecture and Data Modeling: Experts help design data models and architectures
+                                    that optimize data visualization, ensuring that your data is structured for
+                                    effective reporting.</li>
+                                <li>Data Integration: Consultants assist in connecting Power BI to your data sources,
+                                    whether they are databases, cloud services, or other applications.</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-12 col-md-12 col-12 pt-4">
                         <div class="innerpage-para-list-dv">
                             <ul>
-                                <li>Report and Dashboard Development: Consultants can create custom reports and dashboards tailored to your specific business requirements.</li>
-                                <li>Training and Knowledge Transfer: Providing training to your team members so they can use Power BI effectively.</li>
-                                <li>Performance Optimization: Identifying and addressing performance bottlenecks to ensure smooth data retrieval and report rendering.</li>
-                                <li>Security and Compliance: Advising on data security and compliance best practices when handling sensitive information in Power BI.</li>
+                                <li>Report and Dashboard Development: Consultants can create custom reports and
+                                    dashboards tailored to your specific business requirements.</li>
+                                <li>Training and Knowledge Transfer: Providing training to your team members so they can
+                                    use Power BI effectively.</li>
+                                <li>Performance Optimization: Identifying and addressing performance bottlenecks to
+                                    ensure smooth data retrieval and report rendering.</li>
+                                <li>Security and Compliance: Advising on data security and compliance best practices
+                                    when handling sensitive information in Power BI.</li>
                             </ul>
                         </div>
                     </div>
@@ -368,13 +341,13 @@
                                     <a href="index-2.html"><img src="assets/img/logo/w_logo.svg" alt=""></a>
                                 </div>
                                 <div class="footer-content">
-                                    <p>Grursus mal suada faci lisis the Lorem consec elit.</p>
+                                    <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
+                                        dedicated to pioneering in our domain</p>
                                     <ul class="list-wrap">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -386,10 +359,11 @@
                                 </div>
                                 <div class="fw-link">
                                     <ul class="list-wrap">
-                                        <li><a href="it-services.html">Services 1</a></li>
-                                        <li><a href="it-services.html">Services 2</a></li>
-                                        <li><a href="it-services.html">Services 3</a></li>
-                                        <li><a href="it-services.html">Services 4</a></li>
+                                        <li><a href="power-bi.html">Power BI</a></li>
+                                        <li><a href="sharepoint.html">SharePoint</a></li>
+                                        <li><a href="ms-dynamics-365-business-central.html">MS Dynamics 365 Business
+                                                Central</a></li>
+                                        <li><a href="microsoft-azure.html">Microsoft Azure</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -404,7 +378,6 @@
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="#">Services</a></li>
-                                        <li><a href="#">Project</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
@@ -416,13 +389,7 @@
                                     <h4 class="title">Get In Touch</h4>
                                 </div>
                                 <div class="fw-link">
-                                    <!-- <ul class="list-wrap">
-                                            <li><a href="contact.html">Forum Support</a></li>
-                                            <li><a href="faq.html">Help & FAQ</a></li>
-                                            <li><a href="contact.html">Contact Us</a></li>
-                                            <li><a href="services-details.html">Pricing and plans</a></li>
-                                            <li><a href="contact.html">Cookies Policy</a></li>
-                                        </ul> -->
+
                                     <iframe
                                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7157.366525949512!2d82.26845736272045!3d26.23947925783612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399080ec0d1819dd%3A0x1d29ffa27d01c7f2!2sBarausa%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1697823254907!5m2!1sen!2sin"
                                         width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
@@ -438,17 +405,14 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="copyright-text">
-                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved by
-                                    <span>www.pandeytech.in</span>
-                                </p>
+                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved </p>
                             </div>
                         </div>
                         <div class="col-lg-5">
                             <div class="footer-menu">
                                 <ul class="list-wrap">
-                                    <li><a href="contact.html">Privacy Policy</a></li>
-                                    <li><a href="contact.html">Terms & Conditions</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="javascript:void(0);">Privacy Policy</a></li>
+                                    <li><a href="javascript:void(0);">Terms & Conditions</a></li>
                                 </ul>
                             </div>
                         </div>
